jump to row and stop animation

--- a/public/css/bl.css
+++ b/public/css/bl.css
@@ -20,6 +20,17 @@
     line-height: 0px;
     position: relative;
 }
+.point2:after{
+    content: "|";
+    font-size: 50pt;
+    font-weight: bold;
+    color: #9ecee5;
+    top: -6px;
+    left: 27px;
+    display: -webkit-box;
+    line-height: 0px;
+    position: relative;
+}
 .table-responsive{
   overflow: visible !important;
 }
